filters and sorting were  added

--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,18 @@
 
       <main>
         <!-- Содержимое страницы -->
-        <ul class="catalogue__list"></ul>
+        <section class="mission"></section>
+        <section class="advantages"></section>
+        <section class="filter-reason"></section>
+        <section class="filter-color"></section>
+        <section class="catalog container">
+          <div class="catalogue__header">
+            <h2 class="title title--h3 catalogue__title">Каталог</h2>
+            <div class="catalogue__sorting">
+            </div>
+          </div>
+          <ul class="catalogue__list"></ul>
+        </section>
         <!-- Пример контрола для открытия попапа -->
         <button class="element-which-is-open-popup">
           Клик, чтобы открыть попап
